# ihist

./: .gitignore  .pre-commit-config.yaml  README.md  ihist.cpp  ihist.hpp  ihist_bench.cpp  ihist_test.cpp  justfile  meson.build  meson_options.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: api_bench.cpp  bench_mono10_filt_mt.cpp  bench_mono10_filt_st.cpp  bench_mono10_mt.cpp  bench_mono10_st.cpp  bench_mono12_filt_mt.cpp  bench_mono12_filt_st.cpp  bench_mono12_mt.cpp  bench_mono12_st.cpp  bench_mono14_filt_mt.cpp  bench_mono14_filt_st.cpp  bench_mono14_mt.cpp  bench_mono14_st.cpp  bench_mono16_mt.cpp  bench_mono16_st.cpp  bench_mono8_mt.cpp  bench_mono8_st.cpp  bench_rgb10_filt_mt.cpp  bench_rgb10_filt_st.cpp  bench_rgb10_mt.cpp  bench_rgb10_st.cpp  bench_rgb12_filt_mt.cpp  bench_rgb12_filt_st.cpp  bench_rgb12_mt.cpp  bench_rgb12_st.cpp  bench_rgb14_filt_mt.cpp  bench_rgb14_filt_st.cpp  bench_rgb14_mt.cpp  bench_rgb14_st.cpp  bench_rgb16_mt.cpp  bench_rgb16_st.cpp  bench_rgb8_mt.cpp  bench_rgb8_st.cpp  bench_rgbx10_filt_mt.cpp  bench_rgbx10_filt_st.cpp  bench_rgbx10_mt.cpp  bench_rgbx10_st.cpp  bench_rgbx12_filt_mt.cpp  bench_rgbx12_filt_st.cpp  bench_rgbx12_mt.cpp  (+14 more)
include/ihist/: ihist.h
java/: jreleaser.yml  meson.build  pom.xml  symbols-macos.txt
java/src/main/cpp/: ihistj_jni.cpp
java/src/main/java/ihistj/: Histogram.java  HistogramRequest.java  IHistNative.java  NativeLibraryLoader.java
java/src/main/java/io/github/marktsuchida/ihist/: NativeLibraryLoader.java
java/src/test/java/ihistj/: HistogramTest.java  IHistNativeTest.java  NativeLibraryLoadingIT.java  ValidationTest.java
python/: meson.build  symbols-macos.txt
python/benchmarks/: bench_histogram.py  environment.yml
python/src/ihist/: __init__.py  _ihist_bindings.cpp
python/tests/: test_bindings.py  test_validation.py
scripts/: build_static_tbb.sh  build_stubs.py  plot_benchmarks.py  plot_mt_datasize.py  plot_mt_grainsize.py  ruff.toml  tune.py  tune_mt.py
src/: meson.build
src/ihist/: ihist.cpp  ihist.hpp  phys_core_count.cpp  phys_core_count.hpp  tuning_cortex_a72.h
subprojects/: .gitignore  catch2.wrap  google-benchmark.wrap
tests/: all_values.cpp  api.cpp  constant_input.cpp  empty_input.cpp  internal_utils.cpp  meson.build  parameterization.hpp  random_input.cpp  test_components.cpp  test_implementation_variants.cpp  test_region_selection.cpp
