# This file is part of ihist
# Copyright 2025 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: MIT

[build-system]
requires = ["meson-python", "numpy"]
build-backend = "mesonpy"

[project]
name = "ihist"
description = "Fast integer image histograms"
dynamic = ["version"]
license = "MIT"
readme = "README.md"
authors = [{ name = "Mark A. Tsuchida" }]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0"]

[tool.meson-python.args]
setup = [
    "-Dpython-bindings=enabled",
    "-Dbenchmarks=disabled",
    "-Dtests=disabled",
    "-Ddefault_library=static",
]
install = ["--tags=python-runtime"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501", # Line too long
]

[tool.cibuildwheel]
# Statically link TBB for PyPI package.
# Set TBB_PREFIX and PKG_CONFIG_PATH before running cibuildwheel.
# (Also set CXX=clang-cl on Windows.)
# For CI, these are set in .github/workflows/ci.yml.
before-build = "bash ./scripts/build_static_tbb.sh"
skip = "*-musllinux* *-win32 *-manylinux_i686"
test-extras = "test"
test-command = "pytest {project}/python/tests"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
# Only test native arch (CI runs on ARM)
test-skip = "*-macosx_x86_64"
